Phase2/works
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/build$
 make
Consolidate compiler generated dependencies of target server
[ 33%] Built target server
Consolidate compiler generated dependencies of target client
[ 66%] Built target client
Consolidate compiler generated dependencies of target test_system_stats
[ 83%] Building CXX object CMakeFiles/test_system_stats.dir/test/test_system_stats.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp: In lambda function:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/test/test_system_stats.cpp:239:9: error: ‘main’ was not declared in this scope
  239 |         main(2, argv);
      |         ^~~~
make[2]: *** [CMakeFiles/test_system_stats.dir/build.make:76: CMakeFiles/test_system_stats.dir/test/test_system_stats.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/test_system_stats.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
